# open_human_ontology

./: .gitignore  ARCHITECTURE.md  CAPABILITIES.md  Cargo.toml  FINAL_REPORT.md  LATEST_UPDATES.md  LICENSE  README.md  REFACTORING_STATUS.md  RELATIONSHIPS.md  SESSION_SUMMARY.md  VISION.md
agent/: prompt.md  ralph.sh  visualize.ts
agent/docs/: ARCHITECTURE.md  EXAMPLES.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  LATEST_ADDITIONS.md  LATEST_ENHANCEMENTS.md  PATHOLOGY_COVERAGE.md  PERSONALIZED_MEDICINE_CAPABILITIES.md  PROGRESS.md  REFACTORING_NUTRITION.md  SESSION_AS_SUMMARY.md  SESSION_LOGS_ARCHIVE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_OCT10_HN_RESPONSE.md  SESSION_SUMMARY_OCT10_NIGHT.md  SESSION_SUMMARY_OCT11_AW.md  SESSION_SUMMARY_OCT11_AX.md  SESSION_SUMMARY_OCT11_AY.md  SESSION_SUMMARY_OCT11_AZ.md  SESSION_SUMMARY_OCT11_BA.md  SESSION_SUMMARY_OCT11_BB.md  SESSION_SUMMARY_OCT11_BC.md  SESSION_SUMMARY_OCT11_BD.md  SESSION_SUMMARY_OCT11_BE.md  SESSION_SUMMARY_OCT11_BF.md  SESSION_SUMMARY_OCT11_BG.md  SESSION_UPDATE.md
agent/docs_archive/: CAPABILITIES.md  COMPLETION_SUMMARY.md  (+1 more)
config_examples/: adult_male_healthy.toml
docs/: SIMULATION_IMPROVEMENTS.md
examples/: acetaldehyde_metabolism.rs  acid_base_balance.rs  alcohol_pharmacokinetics.rs  alzheimers_progression_simulation.rs  ancestry_health_profiling.rs  ancestry_pharmacogenomics_demo.rs  asian_ancestry_comprehensive.rs  asian_ancestry_profile.rs  calcium_homeostasis_feedback.rs  cancer_biomarker_simulation_groundtruth.rs  cancer_progression_simulation.rs  cardiac_ischemia_detector.rs  cellular_stress_cascade.rs  circadian_disruption_jetlag.rs  clinical_biomarker_analyzer.rs  complete_personalized_health.rs  comprehensive_analysis.rs  comprehensive_disease_analysis.rs  comprehensive_genetic_analysis.rs  comprehensive_health_assessment.rs  comprehensive_human_test.rs  comprehensive_medical_assessment.rs  comprehensive_simulation.rs  config_demo.rs  demo.rs  drug_interaction_calculator.rs  evidence_based_nutrition.rs  exercise_physiology_vo2max.rs  exercise_stress_adaptation.rs  expanded_validation_demo.rs  full_genetic_analysis_demo.rs  genetic_analysis.rs  genetic_profile_demo.rs  ghk_resting_potential.rs  glycolysis_kinetics_simulation.rs  gpcr_camp_signaling_cascade.rs  hemoglobin_allosteric_cooperativity.rs  hodgkin_huxley_action_potential.rs  hpa_axis_cortisol_rhythm.rs  human_24h_day_simulation.rs  (+21 more)
implementations/: bone_matrix.rs  bone_strength.rs  hydroxyapatite.rs
src/: anthropometry.rs  biometric_authentication.rs  biometrics.rs  comprehensive_health.rs  development.rs  exercise.rs  human.rs  lib.rs  microbiome.rs  nutrition.rs  nutrition_legacy.rs  personalized_medicine.rs  personalized_testing.rs  physiology.rs  simulation.rs  simulation_utils.rs
tests/: ancestry_traits.rs  comprehensive_human_analysis.rs  full_system_integration.rs  genetic_profiles.rs  health_validation.rs  integration_ancestry_pharmacogenomics.rs  neurological_conditions.rs
(+379 files in other folders)
