[package]
name = "human_biology"
version = "0.1.0"
edition = "2021"
authors = ["Human Biology Project Contributors"]
description = "A computational model of human biology focusing on bone structure and mechanics"
license = "MIT"
repository = "https://github.com/lantos1618/open_human_ontology"
keywords = ["biology", "simulation", "bone", "medical", "science"]
categories = ["science", "simulation"]

[dependencies]
# Numerical computations
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }  # Linear algebra
rand = "0.8.5"      # Random number generation
rayon = "1.7.0"     # Parallel computation
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON support
toml = "0.8"        # TOML support for configuration
uuid = { version = "1.6", features = ["v4", "serde"] }  # Unique identifiers

[dev-dependencies]
criterion = "0.5.1"  # Benchmarking
proptest = "1.2.0"  # Property testing 