[package]
name = "human_biology"
version = "0.1.0"
edition = "2021"
authors = ["Human Biology Project Contributors"]
description = "Type-safe computational physiology in Rust: ODE binaries for cardiac, renal, neural, respiratory, endocrine, and pharmacology with peer-reviewed reference data."
license = "MIT"
repository = "https://github.com/lantos1618/open_human_ontology"
keywords = ["biology", "physiology", "simulation", "medical", "pharmacology"]
categories = ["science", "simulation"]

[dependencies]
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }  # Vector3 in physics + skeletal
rand = "0.8.5"      # Random number generation
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON support
toml = "0.8"        # TOML support for configuration data
uuid = { version = "1.6", features = ["v4", "serde"] }  # Cell IDs in blood_cells
once_cell = "1.19"  # Lazy static for TOML data loaders

[dev-dependencies]
proptest = "1.2.0"  # Property testing
